{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 41,
  "lineage": "5f22d3e7-7802-612f-f6c6-40ccad1422e0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-055aa28c23c39f626",
            "domain": "vpc",
            "id": "eipalloc-055aa28c23c39f626",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-23-23-49-133.compute-1.amazonaws.com",
            "public_ip": "23.23.49.133",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Learning Live with AWS \u0026 HashiCorp-nat-eip"
            },
            "tags_all": {
              "Name": "Learning Live with AWS \u0026 HashiCorp-nat-eip",
              "project": "Learning Live with AWS \u0026 HashiCorp"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629022343174:internet-gateway/igw-064e77c8f2c51507e",
            "id": "igw-064e77c8f2c51507e",
            "owner_id": "629022343174",
            "tags": {
              "Name": "Learning Live with AWS \u0026 HashiCorp-internet-gateway"
            },
            "tags_all": {
              "Name": "Learning Live with AWS \u0026 HashiCorp-internet-gateway",
              "project": "Learning Live with AWS \u0026 HashiCorp"
            },
            "vpc_id": "vpc-0d1a85fe5763dec86"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-055aa28c23c39f626",
            "association_id": "eipassoc-055d3048d66535645",
            "connectivity_type": "public",
            "id": "nat-0d18148e336add04a",
            "network_interface_id": "eni-09c5eb72259407301",
            "private_ip": "10.255.0.66",
            "public_ip": "23.23.49.133",
            "subnet_id": "subnet-03e731590f818718d",
            "tags": {
              "Name": "Learning Live with AWS \u0026 HashiCorp-nat"
            },
            "tags_all": {
              "Name": "Learning Live with AWS \u0026 HashiCorp-nat",
              "project": "Learning Live with AWS \u0026 HashiCorp"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0df39b20a98528a6c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d18148e336add04a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0df39b20a98528a6c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-064e77c8f2c51507e",
            "id": "r-rtb-0ec97fabcc5791fd21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ec97fabcc5791fd2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629022343174:route-table/rtb-0df39b20a98528a6c",
            "id": "rtb-0df39b20a98528a6c",
            "owner_id": "629022343174",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Learning Live with AWS \u0026 HashiCorp-private-route-table"
            },
            "tags_all": {
              "Name": "Learning Live with AWS \u0026 HashiCorp-private-route-table",
              "project": "Learning Live with AWS \u0026 HashiCorp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1a85fe5763dec86"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629022343174:route-table/rtb-0ec97fabcc5791fd2",
            "id": "rtb-0ec97fabcc5791fd2",
            "owner_id": "629022343174",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Learning Live with AWS \u0026 HashiCorp-public-route-table"
            },
            "tags_all": {
              "Name": "Learning Live with AWS \u0026 HashiCorp-public-route-table",
              "project": "Learning Live with AWS \u0026 HashiCorp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1a85fe5763dec86"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d48ef756d3de9dda",
            "route_table_id": "rtb-0df39b20a98528a6c",
            "subnet_id": "subnet-0e18ab2dfa5704177"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01217ce743934000e",
            "route_table_id": "rtb-0df39b20a98528a6c",
            "subnet_id": "subnet-0a94272047ef477b6"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0353266460c405ee2",
            "route_table_id": "rtb-0ec97fabcc5791fd2",
            "subnet_id": "subnet-03e731590f818718d"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037fe6a28f93e9977",
            "route_table_id": "rtb-0ec97fabcc5791fd2",
            "subnet_id": "subnet-07d6cd18a87b4d022"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629022343174:subnet/subnet-0e18ab2dfa5704177",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.255.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e18ab2dfa5704177",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "629022343174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Learning Live with AWS \u0026 HashiCorp-private-us-east-1a"
            },
            "tags_all": {
              "Name": "Learning Live with AWS \u0026 HashiCorp-private-us-east-1a",
              "project": "Learning Live with AWS \u0026 HashiCorp"
            },
            "vpc_id": "vpc-0d1a85fe5763dec86"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629022343174:subnet/subnet-0a94272047ef477b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.255.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a94272047ef477b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "629022343174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Learning Live with AWS \u0026 HashiCorp-private-us-east-1b"
            },
            "tags_all": {
              "Name": "Learning Live with AWS \u0026 HashiCorp-private-us-east-1b",
              "project": "Learning Live with AWS \u0026 HashiCorp"
            },
            "vpc_id": "vpc-0d1a85fe5763dec86"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629022343174:subnet/subnet-03e731590f818718d",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.255.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e731590f818718d",
            "ipv6_cidr_block": "2600:1f18:3813:2c00::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0b31aa32883e73aa5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "629022343174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Learning Live with AWS \u0026 HashiCorp-public-us-east-1a"
            },
            "tags_all": {
              "Name": "Learning Live with AWS \u0026 HashiCorp-public-us-east-1a",
              "project": "Learning Live with AWS \u0026 HashiCorp"
            },
            "vpc_id": "vpc-0d1a85fe5763dec86"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629022343174:subnet/subnet-07d6cd18a87b4d022",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.255.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d6cd18a87b4d022",
            "ipv6_cidr_block": "2600:1f18:3813:2c01::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0b3d6f554b1bbe12f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "629022343174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Learning Live with AWS \u0026 HashiCorp-public-us-east-1b"
            },
            "tags_all": {
              "Name": "Learning Live with AWS \u0026 HashiCorp-public-us-east-1b",
              "project": "Learning Live with AWS \u0026 HashiCorp"
            },
            "vpc_id": "vpc-0d1a85fe5763dec86"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629022343174:vpc/vpc-0d1a85fe5763dec86",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.255.0.0/20",
            "default_network_acl_id": "acl-055f3944434fa2e31",
            "default_route_table_id": "rtb-0fa10af1a3fea7bcd",
            "default_security_group_id": "sg-0e692a99aace09048",
            "dhcp_options_id": "dopt-02279772df22933d1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d1a85fe5763dec86",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-02004a2b29dc462f3",
            "ipv6_cidr_block": "2600:1f18:3813:2c00::/56",
            "ipv6_cidr_block_network_border_group": "us-east-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fa10af1a3fea7bcd",
            "owner_id": "629022343174",
            "tags": {
              "Name": "Learning Live with AWS \u0026 HashiCorp-vpc"
            },
            "tags_all": {
              "Name": "Learning Live with AWS \u0026 HashiCorp-vpc",
              "project": "Learning Live with AWS \u0026 HashiCorp"
            }
          }
        }
      ]
    }
  ]
}